--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:DBNAME
-spring.datasource.username=root
-spring.datasource.password=SA
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.initialize=true
+spring.datasource.url=jdbc:postgresql://dpg-cpmuhu5ds78s73ao03sg-a/aninfo_2024_1c_tc
+spring.datasource.username=aninfo_2024_1c_tc_user
+spring.datasource.password=e7EtmzRnrR49QDNFrsprl00DTcLwRq2O
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
