--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dpg-cpmuhu5ds78s73ao03sg-a/aninfo_2024_1c_tc
-spring.datasource.username=aninfo_2024_1c_tc_user
-spring.datasource.password=e7EtmzRnrR49QDNFrsprl00DTcLwRq2O
+spring.datasource.url=postgresql://aninfo_2024_1c_sq11_db_user:8O8tIkzABLvlQXCRBDBcrI4K5H5UT0ip@dpg-cprja2lumphs73c6ntk0-a/aninfo_2024_1c_sq11_db
+spring.datasource.username=aninfo_2024_1c_sq11_db_user
+spring.datasource.password=8O8tIkzABLvlQXCRBDBcrI4K5H5UT0ip
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
