Correccion url db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=postgresql://aninfo_2024_1c_sq11_db_user:8O8tIkzABLvlQXCRBDBcrI4K5H5UT0ip@dpg-cprja2lumphs73c6ntk0-a/aninfo_2024_1c_sq11_db
+spring.datasource.url=jdbc:postgresql://dpg-cprja2lumphs73c6ntk0-a/aninfo_2024_1c_sq11_db
 spring.datasource.username=aninfo_2024_1c_sq11_db_user
 spring.datasource.password=8O8tIkzABLvlQXCRBDBcrI4K5H5UT0ip
 spring.datasource.driverClassName=org.postgresql.Driver
