--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://dpg-cprja2lumphs73c6ntk0-a/aninfo_2024_1c_sq11_db
-spring.datasource.username=aninfo_2024_1c_sq11_db_user
-spring.datasource.password=8O8tIkzABLvlQXCRBDBcrI4K5H5UT0ip
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:DBNAME
+spring.datasource.username=root
+spring.datasource.password=SA
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialize=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
